<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Vandolf Estrellado
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Business Search MVP</string>

    <!-- literals -->
    <string name="call">Call</string>
    <string name="click_to_retry">Click to retry</string>
    <string name="closed">Closed</string>
    <string name="current_location">Current location</string>
    <string name="delivery">Delivery</string>
    <string name="details">Details</string>
    <string name="hours">Hours</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="pickup">Pickup</string>
    <string name="reservation">Reservation</string>
    <string name="search">Search</string>
    <string name="using_current_location">Using current location</string>
    <string name="website">Website</string>
    <string name="yes">Yes</string>

    <!-- formatted -->
    <string name="distance">%1$.1f mi</string>
    <string name="location">%1$s, %2$s</string>
    <string name="open_hours">%1$s %2$s - %3$s</string>
    <string name="reviews">%1$d Reviews</string>

    <!-- hints -->
    <string name="hint_location">Address city state, and/or zip</string>

    <!-- errors -->
    <string name="error_generic">Something went wrong</string>
</resources>
